WIP typesense integration

--- a/ocamlorg.opam
+++ b/ocamlorg.opam
@@ -52,6 +52,8 @@ depends: [
   "cmdliner" {>= "1.1.0"}
   "xmlm"
   "uri"
+  "typesense"
+  "typesense-cohttp-lwt-unix"
   "odoc" {with-doc}
 ]
 build: [
@@ -72,4 +74,6 @@ dev-repo: "git+https://github.com/ocaml/ocaml.org.git"
 pin-depends: [
   ["tailwindcss.dev" "https://github.com/tmattio/opam-tailwindcss/archive/3e60fc32bbcf82525999d83ad0f395e16107026b.tar.gz"]
   ["olinkcheck.~dev" "git+https://github.com/tarides/olinkcheck"]
+  ["typesense.dev" "../typesense-ocaml"]
+  ["typesense-cohttp-lwt-unix.dev" "../typesense-ocaml"]
 ]
