--- a/src/ocamlorg_frontend/dune
+++ b/src/ocamlorg_frontend/dune
@@ -1,6 +1,12 @@
 (library
  (name ocamlorg_frontend)
- (libraries ocamlorg.global dream ocamlorg.data timedesc ocamlorg_static))
+ (libraries
+  ocamlorg.global
+  dream
+  ocamlorg.data
+  timedesc
+  ocamlorg_static
+  typesense))
 
 (include_subdirs unqualified)
 
