attempt to make Playground build with Dune Developer Preview (fails)

--- a/playground/Makefile
+++ b/playground/Makefile
@@ -1,20 +1,12 @@
 COMPILER=5.0.0
 
-.PHONY: create_switch
-create_switch: ## Create switch
-	opam switch create . $(COMPILER) --no-install
-
-.PHONY: deps
-deps: create_switch ## Install development dependencies
-	opam install . --deps-only -y
-
-.PHONY: switch
-switch: deps ## Create an opam switch and install development dependencies
+dune.lock: ## Generate dune.lock directory
+	dune pkg lock --workspace dune-workspace --root .
 
 .PHONY: build
-build:
-	opam exec -- dune build --root .
+build: dune.lock
+	dune build --root .
 
 .PHONY: fmt
 fmt: ## Format the codebase with ocamlformat
-	opam exec -- dune build --root . --auto-promote @fmt
+	dune build --root . --auto-promote @fmt
