Build playground with dune pkg

--- a/playground/dune-project
+++ b/playground/dune-project
@@ -31,15 +31,55 @@
   "This repository contains the playground served on https://ocaml.org/play.")
  (allow_empty)
  (depends
-  (ocaml
-   (>= 5.0.0))
-  (brr
-   (>= 0.0.6))
-  esbuild
-  (js_of_ocaml
-   (>= 5.0))
-  js-top-worker
-  code-mirror
-  merlin-js
-  rpclib
-  rpclib-lwt))
+  (astring (= 0.8.5))
+  (base-bigarray (= base))
+  (base-bytes (= base))
+  (base-domains (= base))
+  (base-nnp (= base))
+  (base-threads (= base))
+  (base-unix (= base))
+  (base64 (= 3.5.1))
+  (brr (= 0.0.7))
+  (cmdliner (= 1.3.0))
+  (code-mirror (= dev))
+  (cppo (= 1.8.0))
+  (csexp (= 1.5.2))
+  dune
+  dune-configurator
+  (esbuild (= dev))
+  (gen (= 1.1))
+  (js-top-worker (= dev))
+  (js_of_ocaml (= 6.0.1))
+  (js_of_ocaml-compiler (= 6.0.1))
+  (js_of_ocaml-ppx (= 6.0.1))
+  (js_of_ocaml-toplevel (= 6.0.1))
+  (lwt (= 5.9.1))
+  (menhir (= 20240715))
+  (menhirCST (= 20240715))
+  (menhirLib (= 20240715))
+  (menhirSdk (= 20240715))
+  (merlin-js (= dev))
+  (merlin-lib (= 4.14-500))
+  (ocaml (= 5.0.0))
+  (ocaml-base-compiler (= 5.0.0))
+  (ocaml-compiler-libs (= v0.12.4))
+  (ocaml-config (= 3))
+  (ocaml-options-vanilla (= 1))
+  (ocamlbuild (= dev))
+  (ocamlfind (= dev))
+  (ocplib-endian (= 1.2))
+  (ppx_blob (= 0.9.0))
+  (ppx_derivers (= 1.2.1))
+  (ppx_deriving_rpc (= 9.0.0))
+  (ppxlib (= 0.35.0))
+  (result (= 1.5))
+  (rpclib (= 9.0.0))
+  (rpclib-lwt (= 9.0.0))
+  (rresult (= 0.7.0))
+  (sedlex (= 3.4))
+  (seq (= base))
+  (sexplib0 (= v0.17.0))
+  (stdlib-shims (= 0.3.0))
+  (topkg (= 1.0.8))
+  (xmlm (= 1.4.0))
+  yojson ))
