--- a/playground/dune
+++ b/playground/dune
@@ -14,6 +14,7 @@
     --external:tty
     --external:child_process
     --external:constants
+    --external:node:*
     --minify
     --bundle
     --outfile=playground.min.js
